src/css/style.css
body {
    background-color: #bebebe;
}

/* HEADER */

header {
    background-color: #252531;
    padding: .8em;
    width: 100%;
    display: flex;
    margin: 0 auto;
    flex-direction: row;
    color: white;
}

header .login_register {
    display: inline;
    margin: auto 2em auto auto;
}

header .button {
    padding: 1em;
    margin-left: 1em;
    border-radius: 10px;
}

header .button-text {
    margin: auto;
    width: 7em;
    text-align: center;
    display: inline-block;
}


header #login {
    border: #8bc7b5 solid 4px;
    color: #8bc7b5;
    border-radius: 10px;
    background-color: #fdfefe;
}

header #register {
    border: #ed3a58 solid 4px;
    border-radius: 10px;
    background-color: #ed3a58;
}

header #title {
    font-family: "Ubuntu Thin", sans-serif;
    font-size: 3em;
    margin: auto 0.3em;
}

/* HEADER BUTTONS */

.login_register_form button {
    font-size: 1.2rem;
    flex: 1;
    border: #ed3a58 solid 4px;
    border-radius: 10px;
    background-color: #ed3a58;
}

.login_register_form span{
    font-size: 1.2rem;
    flex: 1;
    border: #ed3a58 solid 4px;
    border-radius: 10px;
    background-color: #ed3a58;
    text-align: center;
}

#buttons-section button:first-child{
    margin-right: 0.5em;
}

#login_register_outer_box {
    background-color: #ffffff;
    padding: 1em;
}

#login_register_title{
    font-size: 3rem;
    color: #323232;
    margin:  10% auto 15% auto;
    text-align: center;
}

.no_link_style{
    text-decoration: none;
    background-color: inherit;
}

.no_link_style:hover{
    cursor: default;
}



/* PET SELECTOR */


aside {
    background-color: white;
    margin: 0 0 auto 0;
}

a {
    all: unset;
    text-decoration: none;
}

ul.no_bullet li {
    list-style-type: none;
}

#filterElement {
    padding: 0;
    margin: 0;
}

.multipleSelector,
.radioSelector,
.textInput,
.intRange {
    padding: 1em;
    margin: 0;
}

#filterTag {
    background-color: #232323;
    color: #ffffdc;
    padding: 1em;
}
#filterTag button{
    float: right;
}

button.dropdown_button{
    float: right;
}

div.multipleSelector,
div.radioSelector, 
div.textInput,
div.intRange {
    border-bottom: 2px solid black;
}

.multipleSelector label input,
.radioSelector label input {
    display: none;
}

.radioSelector span {
    border-radius: 50%;
}
.textInput input.textInput{
    padding: 0.5em;
    width: 100%;
}

.intRange div{
    margin: 0.3em;
}
.intRange input[type="number"]{
    width: 4em;
    margin: 0.3em;
}
.dropdown_content{
    display: none;
}

.range_container{
    display: flex;
}

input.intInput[type=number]{
    margin: 0 0 0 auto;
}
label.intInput{
    margin: auto 0;
}

div.drop_down{
    display: flex;
}

label.drop_down{
    margin: auto auto auto 0;
}

.multipleSelector label span,
.radioSelector label span {
    height: 20px;
    width: 20px;
    top: 5px;
    border: 1px solid grey;
    display: inline-block;
    position: relative;
}

.multipleSelector input[type="checkbox"]:checked+span::after,
.radioSelector input[type="radio"]:checked+span::after {
    content: "";
    height: 10px;
    width: 10px;
    position: absolute;
    top: 4px;
    left: 4px;
    border: 1px solid grey;
    background: #f5b027;
    background-color: rgb(245, 176, 39);
    background-position-x: 0%;
    background-position-y: 0%;
    background-repeat: repeat;
    background-attachment: scroll;
    background-image: none;
    background-size: auto;
    background-origin: padding-box;
    background-clip: border-box;
    border-radius: inherit;
}

input[type=text], input[type=password] {
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    box-sizing: border-box;
    background-color: #e6e6e6;
}

/* PET DISPLAY */


.pets_display{
    width: 100%;

}

.animal_main_page{
    margin-right: 2px;
}

.animal_text_box{
    border-top: black;
    border-radius: 1px;

}

img.animal_image_box{
    border: 5px solid white;
    border-radius: 3px;
}


.animal_text_box{
    font-size: 2em;
    font-weight: 300;
    height: 40px;
    display: block;
    text-align: center;
    background-color: white;
    
}

.title_pets_display{
    color: purple;
    display: block;
    text-align: center;
    font-size: 3em;
    width: 100%;
}

.show_dropdown {
    display: block;
}

